--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       -->
 <html>
     <head>
-	   <title>Shanti Kunj Resort & Restaurant</title>
+	   <title>Shanti Kunj Resort </title>
 
 
 	<!--External CSS -->
