--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/jquery.css">
-<!--	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"> -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"> 
 
 	<!-- External CSS End-->
 	
@@ -350,7 +350,7 @@ function myFunction() {
 
 
 <div id="googleMaps" class="container mt-5">
-<script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:100%;width: 100%;'><div id='gmap_canvas' style='height:440px;width:700px;'></div><div><small><a href="embedgooglemaps.com/">https://embedgooglemaps.com/</a></small></div><div><small><a href="http://www.kumo-racing.nl/">newyorkpass</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:15,center:new google.maps.LatLng(30.2503392,78.87725039999998),mapTypeId: google.maps.MapTypeId.HYBRID};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(30.2503392,78.87725039999998)});infowindow = new google.maps.InfoWindow({content:'<strong>Shanti Kunj Resort</strong><br>Shanti Kunj Resort Dhamak, NH 58, Dang Chaura, Uttarakhand<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+<script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:100%;width: 100%;'><div id='gmap_canvas' style='height:100%;width:100%;'></div><div><small><a href="embedgooglemaps.com/">https://embedgooglemaps.com/</a></small></div><div><small><a href="http://www.kumo-racing.nl/">newyorkpass</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:15,center:new google.maps.LatLng(30.2503392,78.87725039999998),mapTypeId: google.maps.MapTypeId.HYBRID};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(30.2503392,78.87725039999998)});infowindow = new google.maps.InfoWindow({content:'<strong>Shanti Kunj Resort</strong><br>Shanti Kunj Resort Dhamak, NH 58, Dang Chaura, Uttarakhand<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
 
 </div>
 
@@ -396,10 +396,9 @@ function myFunction() {
 
   		<script>
 jQuery(document).ready(function() {
-   setTimeout(function (){
+   
+   jQuery('#loading').fadeOut(2000);
 
-  jQuery('#loading').fadeOut(2000);
-}, 2000);
 });
 </script>
 <!--End of Document-->
