--- a/index.html
+++ b/index.html
@@ -64,17 +64,23 @@
                     <a class="navbar-brand" href="#">Navbar</a>
 
      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                   <li class="nav-item active">
-                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                   </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="#">Link</a>
-                 </li>
-                <li class="nav-item">
-                     <a class="nav-link" href="#">Disabled</a>
-                </li>
-             </ul>
+             <ul class="navbar-nav mt-lg-0">
+      <li class="nav-item m-2">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item m-2">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item m-2">
+        <a class="nav-link" href="#">Something else</a>
+      </li>
+      <li class="nav-item m-2">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item m-2">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+    </ul>
     
     </div>
 </nav>
