--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"> 
 
-	<!-- External CSS End-->
 	
 
   
 
    </head>
 <body>
+
+
 
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark DeskBar"
       id="DesktopNav" data-aos="fade-up" aos-duration=3000>
@@ -63,7 +64,16 @@
 </nav>
 
 
+<div class="mainhead jumbotron h-100">
 
+  <h1 class="display-4" data-aos="fade-down" data-aos-duration="3000">Hello, world!</h1>
+  <p class="lead" data-aos="fade-down" data-aos-duration="3000">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <hr class="my-5" data-aos="zoom-in">
+  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p class="lead" data-aos="fade-up" data-aos-duration="3000">
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Fast Enquiry</button>
+  </p>
+</div>
 
 
   
@@ -301,9 +311,9 @@
   	<div class="col-sm-6">
 
 
-<div id="googleMaps" class="container mt-5">
+<<!-- div id="googleMaps" class="container mt-5">
 <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:100%;width: 100%;'><div id='gmap_canvas' style='height:100%;width:100%;'></div><div><small><a href="embedgooglemaps.com/">https://embedgooglemaps.com/</a></small></div><div><small><a href="http://www.kumo-racing.nl/">newyorkpass</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:15,center:new google.maps.LatLng(30.2503392,78.87725039999998),mapTypeId: google.maps.MapTypeId.HYBRID};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(30.2503392,78.87725039999998)});infowindow = new google.maps.InfoWindow({content:'<strong>Shanti Kunj Resort</strong><br>Shanti Kunj Resort Dhamak, NH 58, Dang Chaura, Uttarakhand<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
-
+ -->
 </div>
 
 </div>
