--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <h1 class="display-4" data-aos="fade-down" data-aos-duration="3000">Hello, world!</h1>
   <p class="lead" data-aos="fade-down" data-aos-duration="3000">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
   <hr class="my-5" data-aos="zoom-in">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p data-aos="zoom-in">It uses utility classes for typography and spacing to space content out within the larger container.</p>
   <p class="lead" data-aos="fade-up" data-aos-duration="3000">
     <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Fast Enquiry</button>
   </p>
