--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
 
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark DeskBar"
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark DeskBar fixed-top"
       id="DesktopNav" data-aos="fade-up" aos-duration=3000>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
