--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </nav>
 
 
-<div class="mainhead jumbotron h-100">
+<div class="mainhead jumbotron h-100 mt-5">
 
   <h1 class="display-4" data-aos="fade-down" data-aos-duration="3000">Hello, world!</h1>
   <p class="lead" data-aos="fade-down" data-aos-duration="3000">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
