--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <head>
 	   <title>Shanti Kunj Resort </title>
 
+	    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 
 	<!--External CSS -->
 
