deleted "not important" stuff

--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">  -->
 
 	
+<style type="text/css">
+	
+	.mainhead {
 
+		background-image: url('images/jumback.jpg');
+      background:no-repeat;
+      background-size:100% auto;
+	}
+</style>
   
 
    </head>
