added mobile support of previous changes

--- a/index.html
+++ b/index.html
@@ -30,15 +30,7 @@
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">  -->
 
 	
-<style type="text/css">
-	
-	.mainhead {
 
-		
-       background:no-repeat;
-      background-size:100% auto;
-	}
-</style>
   
 
    </head>
@@ -59,16 +51,16 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item m-2">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Explore</a>
       </li>
       <li class="nav-item m-2">
-        <a class="nav-link" href="#">Something else</a>
+        <a class="nav-link" href="#">Gallery</a>
       </li>
       <li class="nav-item m-2">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#"></a>
       </li>
       <li class="nav-item m-2">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Contact Us</a>
       </li>
     </ul>
     
@@ -76,13 +68,13 @@
 </nav>
 
 
-<div class="jumbotron mainhead h-100 mt-5 text-light" style="background-image: url('images/jumback.jpg');">
+<div class="mainhead h-100 mt-5 text-light jumbotron" style="background-image: url(images/jumback.jpg);">
 
-  <h1 class="display-4" data-aos="fade-down" data-aos-duration="3000">Hello, world!</h1>
-  <p class="lead" data-aos="fade-down" data-aos-duration="3000">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <h1 class="display-4" data-aos="fade-down" data-aos-duration="3000">Shanti Kunj Resort & Restaurant</h1>
+  <p class="lead" data-aos="fade-down" data-aos-duration="3000">NH58, Dhamak, Near Dhari Devi, Kalyasaur, Pauri (Gwl).</p>
 
   <hr class="my-5" data-aos="zoom-in">
-  <p data-aos="zoom-in">It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p data-aos="zoom-in">Deluxe Rooms. Free Parking space. Cheap Prices</p>
   <p class="lead" data-aos="fade-up" data-aos-duration="3000">
     <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Fast Enquiry</button>
   </p>
