--- a/contact.html
+++ b/contact.html
@@ -64,15 +64,20 @@
 </nav>
 
         <section class="HeroSection">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <h5>Hello, world! Full width Hero-unit header</h5>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a href="#" class="btn btn-primary btn-large">Learn more »</a></p>
-      </div>
-    </div>
-  </div>
+   <center><h1 class="display-4">Contact Us</h1></center>
+ <center> <p class="lead">Fill the form below to get in touch with us</p> </center>
+  <hr class="my-4">
+  <br><br><br>
+  <p class="lead">
+  	<center> <a href='#Scrolled' class="scrollDown" style="margin-left: 200px;">
+<svg class="arrows">
+              <path class="a1" d="M0 0 L30 32 L60 0"></path>
+              <path class="a2" d="M0 20 L30 52 L60 20"></path>
+              <path class="a3" d="M0 40 L30 72 L60 40"></path>
+            </svg>
+</a>
+    </center>
+  </p>
 </section>
 
 
@@ -94,6 +99,21 @@
 		</script>
 		
   
+<script type="text/javascript">
 
+$(document).ready(function(){
+  $(".scrollDown").on('click', function(event) {
+    if (this.hash !== "") {
+      event.preventDefault();
+      var hash = this.hash;
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 1100, function(){
+        window.location.hash = hash;
+      });
+    } 
+  });
+});
+ </script>
 
 </html>
