--- a/gallery.html
+++ b/gallery.html
@@ -64,15 +64,13 @@
 </nav>
 
         <section class="HeroSection">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <h5>Hello, world! Full width Hero-unit header</h5>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a href="#" class="btn btn-primary btn-large">Learn more »</a></p>
-      </div>
-    </div>
-  </div>
+  <center><h1 class="display-3">GALLERY</h1></center>
+  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <hr class="my-4">
+  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  </p>
 </section>
 
 
