--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                            <div id="loading-image">
                               <img src="loader.gif" style="height: 100px; width: 100px;">
                             </div>
-                            
+
                                </center>
                             <div id="form-content">
         
@@ -440,7 +440,10 @@ $(document).ready(function() {
       });
     })
     .fail(function(){
-      alert('Ajax Submit Failed ...');  
+      alert('Ajax Submit Failed ...');
+      $('#form-content').show();
+      $('#loading-image').hide();
+
     });
   });
   
