ajax error modified (temperory)

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ $(document).ready(function() {
       });
     })
     .fail(function(){
-      alert('Ajax Submit Failed ...');
+      alert('Ajax Submit Failed. yeah i know I think github does not host php.  pull it on your github Desktop and host on xampp or whatever');
       $('#form-content').show();
       $('#loading-image').hide();
 
