--- a/explore.html
+++ b/explore.html
@@ -74,6 +74,132 @@
 </section>
 
 
+ <!-- Page Content -->
+    <div class="container">
+
+      <!-- Page Heading/Breadcrumbs -->
+      <h1 class="mt-4 mb-3 main-text">Explore :
+        <small class="normal-text">Devbhumi</small>
+      </h1>
+
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="breadcrumb-item active">Explore</li>
+      </ol>
+
+      <div class="row">
+
+        <!-- explore Entries Column -->
+        <div class="col-md-8" id="chardham">
+
+          <!-- explore-1 -->
+          <div class="card mb-4">
+            <img class="card-img-top" src="images/chardham.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h2 class="card-title main-text">Char Dham Yatra</h2>
+              <p class="card-text simple-text">The most famous Char Dham Yarta Begins from Yamunotri, and then proceeds to Gangotri. Then is accompanied by Kedarnath and Badrinath. All these four holy places constitute of the Char Dham Yatra</p>
+              <a href="https://en.wikipedia.org/wiki/Char_Dham" class="btn normal-text btn-color-definer text-dark rounded">Read More &rarr;</a>
+            </div>
+            <div class="card-footer text-muted normal-text">
+              THE CHAR DHAM YATRA ||
+              <a href="https://en.wikipedia.org/wiki/Char_Dham" class="link-fontt "> Learn more</a>
+            </div>
+          </div>
+
+          <!-- Blog Post -->
+          <div class="card mb-4" id="dharidevi">
+            <img class="card-img-top" src="images/dhari_devi.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h2 class="card-title main-text">Dhari Devi Temple</h2>
+              <p class="card-text simple-text">Dhari Devi Temple is one of the most scared temple in Uttrakhand. She is considered to be the guardian deity of Uttarakhand and is revered as the protector of the Char Dhams.</p>
+              <a href="https://en.wikipedia.org/wiki/Dhari_Devi_(Uttarakhand)" class="btn normal-text btn-color-definer text-dark">Read More &rarr;</a>
+            </div>
+            <div class="card-footer text-muted normal-text">
+             DHARI DEVI TEMPLE ||
+              <a href="https://en.wikipedia.org/wiki/Dhari_Devi_(Uttarakhand)" class="link-fontt"> Learn more</a>
+            </div>
+          </div> 
+          <!-- Blog Post -->
+          <div class="card mb-4" id="otherss">
+            <img class="card-img-top" src="images/others.png" alt="Card image cap">
+            <div class="card-body">
+              <h2 class="card-title main-text">Other places worth a visit</h2>
+              <p class="card-text simple-text">Other places in Uttrakhand that are worth visiting are : <a class="link-fontt" href="https://en.wikipedia.org/wiki/Tungnath">Tungnath</a>, <a class="link-fontt" href="https://en.wikipedia.org/wiki/Roopkund"> Rupkund</a>, <a href="https://en.wikipedia.org/wiki/Naina_Devi" class="link-fontt"> Nanda Devi</a>, <a class="link-fontt" href="https://en.wikipedia.org/wiki/Nainital">
+                  Nanital
+              </a>,etc. All of these can be easily mapped once you enter Uttrakhand! Fasinated? Read more for other destinations!</p>
+              <a href="https://www.tripsavvy.com/best-uttarakhand-tourist-places-1539883" class="btn btn-color-definer normal-text text-dark">Read More &rarr;</a>
+            </div>
+            <div class="card-footer text-muted normal-text">
+               OTHERS ||
+              <a href="https://www.tripsavvy.com/best-uttarakhand-tourist-places-1539883" class="link-fontt"> learn more</a>
+            </div>
+          </div>
+
+         
+
+        </div>
+
+        <!-- Sidebar Widgets Column -->
+        <div class="col-md-4">
+
+          <!-- Search Widget -->
+          <div class="card mb-4">
+            <h5 class="card-header main-text">Search</h5>
+            <div class="card-body">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search for...">
+                <span class="input-group-btn">
+                  <button class="btn btn-color-definer normal-text text-dark" type="button" onclick="#">Go!</button>
+                </span>
+              </div>
+            </div>
+          </div>
+
+          <!-- others Widget -->
+          <div class="card my-4">
+            <h5 class="card-header main-text">Other places to visit</h5>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul class="list-unstyled mb-0">
+                    <li>
+                      <a href="https://en.wikipedia.org/wiki/Jim_Corbett_National_Park
+
+" class="link-fontt">Corbett National Park </a>
+                    </li>
+                    <li>
+                      <a class="link-fontt" href="https://en.wikipedia.org/wiki/Mussoorie">Mussoorie</a>
+                    </li>
+                    <li>
+                      <a class="link-fontt" href="https://en.wikipedia.org/wiki/Auli">Auli </a>
+                    </li>
+                  </ul>
+                </div>
+                
+              </div>
+            </div>
+          </div>
+
+          <!-- Side Widget -->
+          <div class="card my-4">
+            <h5 class="card-header main-text">Did You Know <i class="fas fa-question-circle"></i></h5>
+            <div class="card-body">
+              <p class="blockquote-reverse normal-text">Tungnath is the highest Shiva temple in the world. Located at an altitude of 4,000 m  (12,000+ ft).
+              And 'Tungnath' means - Lord of peaks. The temple is  believed to be 1000 years old!</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+      <!-- /.row -->
+
+    </div>
+    <!-- /.container -->
+
+
 </body>
 
  <script src="js/jquery.min.js"></script>
